fix : change some colors

--- a/apps/niche1/domain.com/src/pages/index.astro
+++ b/apps/niche1/domain.com/src/pages/index.astro
@@ -3,6 +3,6 @@ import BaseLayout from "@monorepo/shared/themes/starter/layouts/BaseLayout.astro
 ---
 
 <BaseLayout title="Startseite">
-  <h1 class="font-bold text-4xl">Willkommen auf unserer Startseite</h1>
+  <h1 class="font-bold text-4xl border-2 bg-red-500">Willkommen auf unserer Startseite</h1>
   <p>Willkommen auf unserer Startseite</p>
 </BaseLayout>
